Show placeholders on IE [fixes #25022169]

--- a/scss/vendorish/_jquery.placeholder.scss
+++ b/scss/vendorish/_jquery.placeholder.scss
@@ -1,3 +1,3 @@
-input.placeholder {
+textarea.placeholder, input.placeholder {
     color: #a9a9a9;
 }
